less acurate but almost done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,18 @@ project(${projectname})
 # Save the command line compile commands in the build output
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread")
+
 include(CheckCXXCompilerFlag)
 
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
 CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
+# if(COMPILER_SUPPORTS_CXX11)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-endif()
+# elseif(COMPILER_SUPPORTS_CXX0X)
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+# endif()
 
 
 
@@ -28,10 +30,15 @@ find_package(Qt5Network REQUIRED)
 
 
 set(DEPENDENCIES realsense2 ${OpenCV_LIBS}
-                 /home/jessy/librealsense/wrappers/librealsense2.so)
+                 /home/jessy/librealsense/wrappers/librealsense2.so
+                 /usr/lib/x86_64-linux-gnu/libglfw.so
+                /usr/lib/x86_64-linux-gnu/libglut.so 
+                /usr/lib/x86_64-linux-gnu/libGL.so 
+                /usr/lib/x86_64-linux-gnu/libGLU.so 
+                /usr/lib/x86_64-linux-gnu/libGLEW.so )
 
 add_executable(${projectname}            
-               rs-dnn.cpp
+               rs-dnn1.cpp
                cv-helpers.hpp
                include/actionmodule.cpp)
 target_link_libraries(${projectname} ${DEPENDENCIES}
